style form input and buttons without border and outline

--- a/Todolist/style.css
+++ b/Todolist/style.css
@@ -26,5 +26,6 @@ header, form, footer {
 form input, form button {
     padding: 0.5rem;
     font-size: 2rem;
-    border: tomato;
+    border: none;
+    outline: none;
 }
