--- a/Todolist/style.css
+++ b/Todolist/style.css
@@ -43,3 +43,13 @@ form button:hover {
     background-color: white;
 
 }
+
+
+.trash-btn, .complete-btn{
+    background: #ff6f47;
+    color: white;
+    border: none;
+    padding: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
