added styling to trash and complete buttons

--- a/Todolist/style.css
+++ b/Todolist/style.css
@@ -44,6 +44,22 @@ form button:hover {
 
 }
 
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.todo-list{
+    min-width: 30%;
+    list-style: none;
+}
+
+
+
+.todo li{
+    flex: 1;
+}
 
 .trash-btn, .complete-btn{
     background: #ff6f47;
