--- a/Todolist/style.css
+++ b/Todolist/style.css
@@ -68,7 +68,8 @@ form button:hover {
     flex: 1;
 }
 
-.trash-btn, .complete-btn{
+.trash-btn, 
+.complete-btn{
     background: #ff6f47;
     color: white;
     border: none;
